# bitcoin_hwi

./: Cargo.toml  README.md  requirements.txt
src/: commands.rs  error.rs  interface.rs  lib.rs  types.rs
