[package]
name = "bitcoin_hwi"
version = "0.2.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper for Bitcoin Core Hardware Wallet Interface."
repository = "https://github.com/BP-WG/descriptor-wallet"

[dependencies]
amplify = "3.12.0"
bitcoin = { version = "0.28.0", features = ["use-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
base64 = "0.13"

[dev-dependencies]
serial_test = "0.6"
