[package]
name = "bitcoin_hwi"
version = "0.3.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper for Bitcoin Core Hardware Wallet Interface."
repository = "https://github.com/BP-WG/descriptor-wallet"

[dependencies]
amplify = "3.13.0"
bitcoin = { version = "0.29.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
base64 = "0.21.0"

[dev-dependencies]
serial_test = "0.10"
